# first-cursor-project

./: README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  crypto.py  db.py  deps.py  main.py  models.py  schemas.py  security.py
backend/app/routers/: chat.py  chat_extract.py  memory.py  user.py  utils.py
backend/app/services/: cache.py  llm_adapter.py  memory_service.py
backend/tests/: test_user_memory_chat.py
frontend-electron/: package.json  tailwind.config.js  tsconfig.json  tsconfig.main.json  vite.renderer.config.ts
frontend-electron/electron/: main.ts  preload.ts
frontend-electron/src/: index.html
frontend-electron/src/ui/: App.tsx
mobile-expo/: app.json  package.json  tsconfig.json
mobile-expo/src/: App.tsx
shared/: package.json  tsconfig.json
shared/src/: api.ts  types.ts
