[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echo-backend"
version = "0.1.0"
description = "Echo AI companion backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.112",
  "uvicorn[standard]>=0.30",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "cryptography>=43.0",
  "passlib[bcrypt]>=1.7",
  "pyjwt[crypto]>=2.8",
  "httpx>=0.27",
  "pydantic>=2.7",
  "python-multipart>=0.0.9",
  "redis>=5.0",
  "chromadb>=0.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
